--- a/example/chart_xybase.html
+++ b/example/chart_xybase.html
@@ -1,6 +1,12 @@
 <html>
   <body>
 
+    <style>
+    .d3-chart-label {
+      fill: #000;
+    }
+    </style>
+
     <svg id="chart_xybase_example" style="width:600px;height:400px"></svg>
 
     <script src="https://d3js.org/d3-array.v0.7.min.js"></script>
@@ -22,14 +28,26 @@
 
     <script>
 
-    var bottomScale = d3_scale.scaleLinear().range([0, 540]),
-        leftScale = d3_scale.scaleLinear().range([360, 0])
+    var bottomScale = d3_scale.scaleLinear().range([0, 440]),
+        leftScale = d3_scale.scaleLinear().range([260, 0])
 
     var chartBase = d3_chart_xybase.chart_xybase()
-      .bottomScale(bottomScale)
-      .leftScale(leftScale)
-      .bottomLabel('X Axis')
-      .leftLabel('Y Axis')
+      .width(500)
+      .height(300)
+      .renderAxisLeft(false)
+      .renderAxisRight(true)
+      .renderAxisBottom(false)
+      .renderAxisTop(true)
+      //.margin({right: 50, left: 10, top: 30, bottom: 10})
+      //.scaleBottom(bottomScale)
+      //.scaleLeft(leftScale)
+      .scaleTop(bottomScale)
+      .scaleRight(leftScale)
+      .labelTop('X Axis')
+      .labelLeft('Y Axis')
+      .labelPosLeft('bottom')
+      .labelRight('Y Axis')
+      .labelPosRight('bottom')
 
     d3_selection.select('#chart_xybase_example')
       .call(chartBase)
